--- a/main.html
+++ b/main.html
@@ -315,8 +315,8 @@
             </section>
 
         </main>
-        <script src="js/page.js"></script>
-        <script src="js/test.js"></script>
+        <script src="/js/page.js"></script>
+        <script src="/js/test.js"></script>
         <!-- 메인영역 E -->
 
         <!-- 푸터영역 -->
