--- a/main.html
+++ b/main.html
@@ -535,8 +535,8 @@
             </section>
         </main>
 
-        <script src="js/test.js"></script>
-        <script src="js/item.js"></script>
+        <script src="./js/test.js"></script>
+        <script src="./js/item.js"></script>
         <!-- 메인영역 E -->
 
         <!-- 푸터영역 -->
