--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                   <ul>
                     <!-- 왼쪽 동전 이미지 -->
                     <li class="cost ds_flex">
-                      <img src="/resource/img/coin.png" width="40px" />
+                      <img src="../resource/img/coin.png" width="40px" />
                       <p id="cost_L" style="margin: 0">: 1000원</p>
                     </li>
                   </ul>
