--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                   <ul>
                     <!-- 오른쪽 동전 이미지 -->
                     <li class="cost ds_flex">
-                      <img src="/resource/img/coin.png" width="40px" />
+                      <img src="resource/img/coin.png" width="40px" />
                       <p id="cost_R" style="margin: 0">: 1000원</p>
                     </li>
                   </ul>
@@ -701,9 +701,9 @@
       </section>
     </main>
 
-    <script src="./js/test.js"></script>
-    <script src="./js/item.js"></script>
-    <script src="./js/skill.js"></script>
+    <script src="js/test.js"></script>
+    <script src="js/item.js"></script>
+    <script src="js/skill.js"></script>
     <!-- 메인영역 E -->
 
     <!-- 푸터영역 -->
