--- a/index.html
+++ b/index.html
@@ -701,9 +701,9 @@
       </section>
     </main>
 
-    <script src="js/test.js"></script>
-    <script src="js/item.js"></script>
-    <script src="js/skill.js"></script>
+    <script src="https://github.com/2klee/calclol/blob/d03cec3aec1016e759282b1c4204642e96edc9ca/js/test.js"></script>
+    <script src="https://github.com/2klee/calclol/blob/d03cec3aec1016e759282b1c4204642e96edc9ca/js/js/item.js"></script>
+    <script src="https://github.com/2klee/calclol/blob/d03cec3aec1016e759282b1c4204642e96edc9ca/js/js/skill.js"></script>
     <!-- 메인영역 E -->
 
     <!-- 푸터영역 -->
